# esp32-2.16

./: .gitignore  CLAUDE.md  CONTEXT.md
.github/workflows/: bridge.yml  launcher-tests.yml
bridge/: README.md  pyproject.toml
bridge/orb_bridge/: __main__.py  brain.py  gemini_client.py  server.py
bridge/tests/: test_brain.py  test_server.py
docs/adr/: 0001-launcher-hosts-miniapps.md  0002-gemini-via-bridge-brain.md
docs/agents/: domain.md  triage-labels.md
i2c_scanner/: CMakeLists.txt
i2c_scanner/main/: CMakeLists.txt  i2c_scanner.c
launcher/: CMakeLists.txt  README.md  partitions.csv  sdkconfig.defaults
launcher/main/: CMakeLists.txt  Kconfig.projbuild  idf_component.yml  launcher_main.c
launcher/main/app/: ambient.c  ambient.h  ambient_app.c  ambient_app.h  miniapp.c  miniapp.h
launcher/main/audio/: wav.c  wav.h
launcher/main/bsp/: audio.c  audio.h  board_config.h  display.c  display.h  imu_qmi8658.c  imu_qmi8658.h  pmic_axp2101.c  pmic_axp2101.h  touch_cst9217.c  touch_cst9217.h  wifi.c  wifi.h
launcher/main/motion/: motion_app.c  motion_app.h  tilt.c  tilt.h
launcher/main/net/: bridge_client.c  bridge_client.h
launcher/main/orb/: orb_fsm.c  orb_fsm.h
launcher/main/settings/: config.c  config.h
launcher/main/voice/: voice_session.c  voice_session.h
launcher/test/: .gitignore  Makefile  ambient_app_test.c  ambient_test.c  config_test.c  miniapp_test.c  motion_app_test.c  orb_fsm_test.c  tilt_test.c  voice_session_test.c  wav_test.c
