[project]
name = "orb-bridge"
version = "0.1.0"
description = "Computer-side Bridge for the Orb voice assistant — relays device audio to a pluggable Brain (Gemini by default)."
requires-python = ">=3.10"
dependencies = [
    "flask>=3.0",
    "google-genai>=0.3",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
]

[project.scripts]
orb-bridge = "orb_bridge.__main__:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
testpaths = ["tests"]
